--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 class="title">Welcome to The Odin Recipes!</h1>
     <ul>
-        <h1>Welcome to The Odin Recipes!</h1>
         <li><a href="./recipes/Cranberry-Orang-Tea-Ring.html">Cranberry-Orange Tea Ring</a></li>
         <li><a href="./recipes/Quick-Cinnamon.html">Quick Cinnamon Rolls</a></li>
         <li><a href="./recipes/Hanukkah.html">Hanukkah Star Challah</a></li>
